crates/analyzer/tests/snapshots/errors__shadow_builtin_function.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: function name `keccak256` conflicts with built-in function
  ┌─ compile_errors/shadow_builtin_function.fe:2:12
  │
2 │     pub fn keccak256(bytes: Array<u8, 4>) -> Array<u8, 4> {
  │            ^^^^^^^^^ `keccak256` is a built-in function

error: function name `u256` conflicts with built-in type
  ┌─ compile_errors/shadow_builtin_function.fe:6:12
  │
6 │     pub fn u256(x: u8) -> u256 {
  │            ^^^^ `u256` is a built-in type

error: function name `bool` conflicts with built-in type
   ┌─ compile_errors/shadow_builtin_function.fe:10:12
   │
10 │     pub fn bool(x: u8) -> bool {
   │            ^^^^ `bool` is a built-in type


